// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <IssueIcon
    type="BUG"
  />
  <span
    className="source-line-issues-counter"
  >
    2
  </span>
</td>
`;

exports[`should render correctly 2`] = `
<td
  className="source-meta source-line-issues source-line-with-issues"
  data-line-number={3}
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <IssueIcon
    type="VULNERABILITY"
  />
  <span
    className="source-line-issues-counter"
  >
    2
  </span>
</td>
`;

exports[`should render correctly for no issues 1`] = `
<td
  className="source-meta source-line-issues"
  data-line-number={3}
/>
`;
